# eiche

./: .gitignore  Cargo.toml  INTERVAL_ARITHMETIC_OPTIONS.md  README.md  README.org  launch.json.example
.github/workflows/: rust.yml
asg/: Cargo.toml
asg/src/: benchmark.rs  dedup.rs  derivative.rs  error.rs  eval.rs  fold.rs  graph.rs  hash.rs  helper.rs  heuristic.rs  io.rs  latex.rs  lib.rs  lisp.rs  macros.rs  match_template.rs  mutate.rs  parser.rs  prune.rs  reduce.rs  simplify.rs  sort.rs  substitute.rs  template.rs  test.rs  tests.rs  traits.rs  tree.rs  unionfind.rs  walk.rs
asg/src/graph/: mod.rs  node.rs  tests.rs
benches/: dominator.rs  eval.rs  interval.rs  llvm_jit.rs  reduce.rs  substitute.rs
src/: analyze.rs  compile.rs  dedup.rs  derivative.rs  dominator.rs  dominator_idea.rs  dual.rs  error.rs  eval.rs  fold.rs  hash.rs  inari_interval.rs  interval.rs  io.rs  jit.rs  latex.rs  lib.rs  llvm_jit.rs  macros.rs  matrix_ops.rs  mutate.rs  prune.rs  reduce.rs  sort.rs  substitute.rs  template.rs  test.rs  test_util.rs  tree.rs  vec_ops.rs  walk.rs
src/interval/: fold.rs  mod.rs  pruning_eval.rs
src/llvm_jit/: interval.rs  mod.rs  pruned.rs  pruning.rs  pruning_single.rs  simd_array.rs  single.rs
testbench/: Cargo.toml
testbench/src/: main.rs
