[package]
name = "eiche"
version = "0.3.2"
edition = "2024"
authors = ["Ranjeeth Mahankali <ranjeethmahankali@gmail.com>"]
description = "A library with tools for working with symbolic expressions."
readme = "README.md"
repository = "https://github.com/ranjeethmahankali/eiche"
license = "GPL-3.0-only"
keywords = ["symbolic", "expressions", "math", "algebra", "tree"]
categories = ["mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0"
# Inkwell requires the following system dependencies:
# llvm-15, llvm-15-dev, libclang-common-15-dev, update the version number as required.
inkwell = { version = "0.5.0", features = ["llvm15-0"], optional = true }
inari = { version = "2.0.0" }

[features]
llvm-jit = ["dep:inkwell"]

[dev-dependencies]
image = "0.25.5"
criterion = "0.5.1"

[[bench]]
name = "llvm-jit"
path = "benches/llvm_jit.rs"
