[package]
name = "asg"
version = "0.1.0"
edition = "2021"
authors = ["Ranjeeth Mahankali <ranjeethmahankali@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
lazy_static = "1.4"
regex = "1.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] } # Benchmarking tool

[[bench]]
path = "src/benchmark.rs"
name = "benchmark"
harness = false
